rpi5/paperless/gotenberg.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotenberg
  labels:
    app: gotenberg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gotenberg
  template:
    metadata:
      name: gotenberg
      labels:
        app: gotenberg
    spec:
      containers:
        - name: gotenberg
          image: gotenberg/gotenberg:8.15.3@sha256:cec2b75259ea1828bc473521b83c1d4e4a6c45209c56bd6bb0f98f79c071e70d
          imagePullPolicy: IfNotPresent
          command:
            - gotenberg
            - "--chromium-disable-javascript=true"
            - "--chromium-allow-list=file:///tmp/.*"
          ports:
            - containerPort: 3000
              protocol: TCP
          securityContext:
            readOnlyRootFilesystem: false
            allowPrivilegeEscalation: false
            privileged: false
            runAsUser: 1001
          readinessProbe:
            httpGet:
              port: 3000
              path: /health
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
      restartPolicy: Always
