rpi5/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
spec:
  selector:
    app: paperless
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: tika
spec:
  selector:
    app: tika
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9998
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: gotenberg
spec:
  selector:
    app: gotenberg
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
