rpi5/paperless/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.1.100
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperless.local`) || Host(`paperless.internal`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: paperless
          port: 80
  tls:
    secretName: paperless-cert-tls
    domains:
      - main: paperless.local
        sans:
          - paperless.internal
